[Docs] Make 'like' parameter shared
